--- a/deploy-vm/Vagrantfile
+++ b/deploy-vm/Vagrantfile
@@ -11,10 +11,10 @@ Vagrant.configure("2") do |config|
       v.cpus = 1
     end
   else
-    config.vm.box = "generic/ubuntu2204"
+    config.vm.box = "ubuntu/focal64"
     config.vm.provider "virtualbox" do |vb|
       vb.memory = 2048
-      v.cpus = 1
+      vb.cpus = 1
     end
   end
   
