--- a/deploy-vm/Vagrantfile
+++ b/deploy-vm/Vagrantfile
@@ -2,23 +2,17 @@ Vagrant.configure("2") do |config|
   host_arch = `uname -m`.strip
   puts "Hosted arch is: #{host_arch}"
   
-  if host_arch == "arm64"
-    # Configuration for Mac M1/M2 (ARM64)
-    config.vm.box = "ubuntu/jammy64"
-    # Explicitly set provider to vmware_fusion or parallels for ARM64
-    config.vm.provider "vmware_desktop" do |v|
-      v.memory = 2048
-      v.cpus = 1
-    end
-  else
-    config.vm.box = "ubuntu/focal64"
-    config.vm.provider "virtualbox" do |vb|
-      vb.memory = 2048
-      vb.cpus = 1
-    end
+  config.vm.provider "virtualbox" do |vb|
+    vb.memory = 1024
+    vb.cpus = 1
   end
   
-
+  if host_arch == "arm64"
+    # Configuration for Mac M1/M2 (ARM64)
+    config.vm.box = "bento/ubuntu-22.04"
+  else
+    config.vm.box = "ubuntu/focal64"
+  end
   
   # VM for API Billing
   config.vm.define "billing_vm" do |billing_vm|
@@ -27,8 +21,7 @@ Vagrant.configure("2") do |config|
     # This will run the setup-billing.sh (PostgreSQL, RabbitMQ, all dependencies needed)
     billing_vm.vm.provision "shell", path: "scripts/setup-billing.sh"
     # Sync billing-api folder with /apps/billing_api in the VM
-    billing_vm.vm.synced_folder "../billing-api", "/apps/billing-api",
-      type: host_arch == "x86_64" ? "virtualbox" : "nfs"
+    billing_vm.vm.synced_folder "../billing-api", "/apps/billing-api"
   end
   
   # VM for API Gateway
@@ -36,8 +29,7 @@ Vagrant.configure("2") do |config|
     gateway_vm.vm.hostname = "GatewayVM"
     gateway_vm.vm.network "private_network", ip: "192.168.6.26", hostname: true
     gateway_vm.vm.provision "shell", path: "scripts/setup-gateway.sh"
-    gateway_vm.vm.synced_folder "../api-gateway", "/apps/api-gateway",
-      type: host_arch == "x86_64" ? "virtualbox" : "nfs"
+    gateway_vm.vm.synced_folder "../api-gateway", "/apps/api-gateway"
   end
   
   # VM for API Inventory
@@ -45,7 +37,6 @@ Vagrant.configure("2") do |config|
     inventory_vm.vm.hostname = "InventoryVM"
     inventory_vm.vm.network "private_network", ip: "192.168.6.27", hostname: true
     inventory_vm.vm.provision "shell", path: "scripts/setup-inventory.sh"
-    inventory_vm.vm.synced_folder "../inventory-api", "/apps/inventory-api",
-      type: host_arch == "x86_64" ? "virtualbox" : "nfs"
+    inventory_vm.vm.synced_folder "../inventory-api", "/apps/inventory-api"
   end
 end
