--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 **/node_modules
 .vagrant/
 deploy-vm/.vagrant
+*/node_modules
+deploy-vm/.vagrant
+.DS_Store
+*/.DS_Store
+deploy-vm/billing-app
+deploy-vm/api-gateway
+deploy-vm/inventory-api
