billing api done

--- a/billing-api/.env
+++ b/billing-api/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://username:password@localhost:5432/billing_db
+POSTGRES_URL=postgres://billing:billing@localhost:5432/billing_db
 RABBITMQ_URL=amqp://localhost
 BILLING_QUEUE=billing_queue
 PORT=5001
