--- a/billing-api/package.json
+++ b/billing-api/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
-    "@types/express": "^5.0.0"
+    "@types/express": "^5.0.0",
+    "@types/pg": "^8.11.11"
   }
 }
