--- a/api-gateway/.env
+++ b/api-gateway/.env
@@ -1,5 +1,4 @@
-BILLING_SERVICE_URL=http://192.168.6.200:5001
 INVENTORY_SERVICE_URL=http://192.168.6.202:8000
-RABBITMQ_URL=amqp://192.168.6.200
+RABBITMQ_URL=amqp://admin:admin@192.168.6.201
 BILLING_QUEUE=billing_queue
 PORT=8080
